test/compile_errors/stage1/obj/underscore_is_not_a_declarable_symbol.zig
export fn f1() usize {
    var _: usize = 2;
    return _;
}

// `_` is not a declarable symbol
//
// tmp.zig:2:9: error: '_' used as an identifier without @"_" syntax
